<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.UsuarioCarritoFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txv_ccarrito"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_btn_bcarrito"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imv_logoC"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txv_ccarrito"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_4"
        tools:srcCompat="@drawable/logo_4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_listadoC"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_ccarrito" />

    <Button
        android:id="@+id/btn_ccomprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_btn_ccomprar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ucextras" />

    <Button
        android:id="@+id/btn_ucextras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_btn_ucextras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_ccproductos"
        app:layout_constraintTop_toBottomOf="@+id/rcv_listadoC" />

    <TextView
        android:id="@+id/txv_carritoVacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/txt_carritovacio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ccomprar" />

    <TextView
        android:id="@+id/txv_valorTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/btn_ccomprar"
        app:layout_constraintTop_toBottomOf="@+id/btn_ucextras" />

    <Button
        android:id="@+id/btn_ccproductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_btn_ccproductos"
        app:layout_constraintEnd_toStartOf="@+id/btn_ucextras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rcv_listadoC" />

</androidx.constraintlayout.widget.ConstraintLayout>